examples/compiler_errors/adversarial/common_dev_mistakes/UnknownEffectOpTypo.flx
effect Console {
    print: String -> Unit
}

fn bad() -> Unit with Console {
    perform Console.prnit("x")
}
